--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong>PT. BELLA PRAYATAMA</strong>. All Rights Reserved
+        &copy; Copyright <strong>PT. NADA INDAH MANDIRI</strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!--
